--- a/app/css/base/_typography.scss
+++ b/app/css/base/_typography.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC');
+
 body {
   color: $base-font-color;
   font-family: $base-font-family;
