--- a/app/css/components/_bg-images.scss
+++ b/app/css/components/_bg-images.scss
@@ -1,6 +1,6 @@
-
 .section {
   text-align: center;
+  padding: 50px 0 0 0;
 
   h1 {
     font-size: 48px;
@@ -23,6 +23,12 @@
       font-size: 28px;
     }
   }
+
+  &.active {
+    img {
+      opacity: 1;
+    }
+  }
 }
 
 .section,
@@ -37,6 +43,8 @@
   //}
 
   img {
+    opacity: 0;
+    transition: opacity 1s ease-in;
     position: absolute;
     width: 70vw;
     max-width: 1200px;
@@ -46,10 +54,6 @@
       width: 100%;
     }
   }
-}
-
-.section {
-  padding: 50px 0 0 0;
 }
 
 
@@ -91,7 +95,11 @@
   right: 50px !important;
 
   @include mobile {
-    display: none;
+    border-width: 10px 0 10px 10px !important;
+    top: auto;
+    right: 20px !important;
+    bottom: 20%;
+    margin-top: 0;
   }
 }
 
@@ -100,6 +108,10 @@
   left: 50px !important;
 
   @include mobile {
-    display: none;
+    border-width: 10px 10px 10px 0 !important;
+    top: auto;
+    left: 20px !important;
+    bottom: 20%;
+    margin-top: 0;
   }
 }
