--- a/app/css/components/_bg-images.scss
+++ b/app/css/components/_bg-images.scss
@@ -127,12 +127,11 @@
 #fp-nav span.next {
   position: absolute;
   font-size: 40px;
-  transition: opacity 1s;
   text-align: center;
   cursor: pointer;
-  padding: 5px 0;
-  height: 20px;
-  width: 10px;
+  height: 50px;
+  width: 50px;
+  left: -20px;
 }
 
 #fp-nav span.prev {
@@ -140,10 +139,10 @@
 }
 
 #fp-nav span.next {
-  bottom: 50px;
+  bottom: 10px;
 }
 
 #fp-nav span.inactive {
   cursor: default;
-  opacity: 0.25;
+  opacity: 0;
 }
