--- a/app/css/components/_bg-images.scss
+++ b/app/css/components/_bg-images.scss
@@ -3,24 +3,54 @@
   padding: 50px 0 0 0;
 
   h1 {
+    position: relative;
     font-size: 48px;
-    color: #000;
-    margin: 0;
+    margin: auto;
     padding: 0;
+    width: 70vw;
+    max-width: 1200px;
+    text-align: left;
 
     @include mobile {
       font-size: 34px;
+      text-align: center;
+    }
+
+    &:after {
+      content: ' ____________________________________ ';
+      letter-spacing: -3px;
+      font-size: 26px;
+      position: absolute;
+      bottom: 13px;
+      left: 1px;
+      width: 100%;
+      height: 2px;
     }
   }
 
   h2 {
+    position: relative;
     font-size: 34px;
-    color: #000;
-    margin: 0;
+    margin: auto;
     padding: 0;
+    width: 70vw;
+    max-width: 1200px;
+    text-align: left;
+
+    &:after {
+      content: ' _________________ ';
+      letter-spacing: -3px;
+      font-size: 26px;
+      position: absolute;
+      bottom: 13px;
+      left: 1px;
+      width: 100%;
+      height: 2px;
+    }
 
     @include mobile {
       font-size: 28px;
+      text-align: center;
     }
   }
 
