--- a/app/css/components/_bg-images.scss
+++ b/app/css/components/_bg-images.scss
@@ -16,16 +16,16 @@
       text-align: center;
     }
 
-    &:after {
-      content: ' ____________________________________ ';
-      letter-spacing: -3px;
-      font-size: 26px;
-      position: absolute;
-      bottom: 13px;
-      left: 1px;
-      width: 100%;
-      height: 2px;
-    }
+    //&:after {
+    //  content: ' ____________________________________ ';
+    //  letter-spacing: -3px;
+    //  font-size: 26px;
+    //  position: absolute;
+    //  bottom: 13px;
+    //  left: 1px;
+    //  width: 100%;
+    //  height: 2px;
+    //}
   }
 
   h2 {
@@ -37,16 +37,16 @@
     max-width: 1200px;
     text-align: left;
 
-    &:after {
-      content: ' _________________ ';
-      letter-spacing: -3px;
-      font-size: 26px;
-      position: absolute;
-      bottom: 13px;
-      left: 1px;
-      width: 100%;
-      height: 2px;
-    }
+    //&:after {
+    //  content: ' _________________ ';
+    //  letter-spacing: -3px;
+    //  font-size: 26px;
+    //  position: absolute;
+    //  bottom: 13px;
+    //  left: 1px;
+    //  width: 100%;
+    //  height: 2px;
+    //}
 
     @include mobile {
       font-size: 28px;
