--- a/app/css/components/_bg-video.scss
+++ b/app/css/components/_bg-video.scss
@@ -49,9 +49,9 @@
       top: 50%; left: 50%;
       z-index: -1;
       min-width: 101%;
-      min-height: 100%;
+      height: 100%;
       width: auto;
-      height: auto;
+      max-height: 100%;
       transform: translate(-50%, -50%);
 
       @include mobile {
