--- a/app/css/components/_bg-video.scss
+++ b/app/css/components/_bg-video.scss
@@ -46,13 +46,12 @@
 
     video#bgvid {
       position: fixed;
-      top: 50%; left: 50%;
-      z-index: -1;
-      min-width: 101%;
-      height: 100%;
+      min-width: 100%;
+      min-height: 100%;
       width: auto;
-      max-height: 100%;
-      transform: translate(-50%, -50%);
+      height: auto;
+      z-index: -1;
+      @extend .align-both;
 
       @include mobile {
         display: none;
