--- a/app/css/base/_variables.scss
+++ b/app/css/base/_variables.scss
@@ -24,6 +24,7 @@ $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
 $black: #000;
+$white: #fff;
 
 // Font Colors
 $base-font-color: $dark-gray;
