--- a/app/css/components/_bg-video.scss
+++ b/app/css/components/_bg-video.scss
@@ -2,6 +2,7 @@
   position: relative;
   z-index: 2;
   overflow: hidden;
+  padding: 0;
 
   h1 {
     @extend .align-both;
@@ -35,6 +36,7 @@
       background-repeat: no-repeat;
       background-position: 50% 50%;
       background-size: cover;
+      min-height: 100%;
     }
 
     video#bgvid {
