--- a/app/css/components/_lightbox.scss
+++ b/app/css/components/_lightbox.scss
@@ -5,117 +5,108 @@
  * Copyright 2016, Noël Raoul Bossart (http://www.noelboss.com)
  * MIT Licensed.
 **/
-@media all {
-  .featherlight {
-    display: none;
+.featherlight {
+  display: none;
 
-    /* dimensions: spanning the background from edge to edge */
-    position:fixed;
-    top: 0; right: 0; bottom: 0; left: 0;
-    z-index: 2147483647; /* z-index needs to be >= elements on the site. */
+  /* dimensions: spanning the background from edge to edge */
+  position:fixed;
+  top: 0; right: 0; bottom: 0; left: 0;
+  z-index: 2147483647; /* z-index needs to be >= elements on the site. */
 
-    /* position: centering content */
-    text-align: center;
+  /* position: centering content */
+  text-align: center;
 
-    /* insures that the ::before pseudo element doesn't force wrap with fixed width content; */
-    white-space: nowrap;
+  /* insures that the ::before pseudo element doesn't force wrap with fixed width content; */
+  white-space: nowrap;
 
-    /* styling */
-    cursor: pointer;
-    background: #333;
-    /* IE8 "hack" for nested featherlights */
-    background: rgba(0, 0, 0, 0);
-  }
+  /* styling */
+  cursor: pointer;
+  background: #333;
+  /* IE8 "hack" for nested featherlights */
+  background: rgba(0, 0, 0, 0);
+}
 
-  /* support for nested featherlights. Does not work in IE8 (use JS to fix) */
-  .featherlight:last-of-type {
-    background: rgba(0, 0, 0, 0.8);
-  }
+/* support for nested featherlights. Does not work in IE8 (use JS to fix) */
+.featherlight:last-of-type {
+  background: rgba(0, 0, 0, 0.8);
+}
 
-  .featherlight:before {
-    /* position: trick to center content vertically */
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-    margin-right: -0.25em;
-  }
+.featherlight:before {
+  /* position: trick to center content vertically */
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.25em;
+}
 
-  .featherlight .featherlight-content {
-    position: relative;
-    vertical-align: middle;
-    display: inline-block;
-    overflow: visible;
-    margin-left: 5%;
-    margin-right: 5%;
-    max-height: 95%;
-    cursor: auto;
-  }
+.featherlight .featherlight-content {
+  position: absolute;
+  width: 75%;
+  max-height: 90%;
+  cursor: auto;
+  @extend .align-both;
 
-  /* contains the content */
-  .featherlight .featherlight-inner {
-    /* make sure its visible */
-    display: block;
-  }
-
-  .featherlight .featherlight-close-icon {
-    /* position: centering vertical and horizontal */
-    position: absolute;
-    z-index: 9999;
-    top: 0;
-    right: -40px;
-    font-size: 30px;
-    line-height: 25px;
-    width: 25px;
-    cursor: pointer;
-    text-align: center;
-    font-family: Arial, sans-serif;
-    background: transparent;
-    color: #fff;
-    outline: 0;
-    border: none;
-    padding: 0;
-  }
-
-  /* See http://stackoverflow.com/questions/16077341/how-to-reset-all-default-styles-of-the-html5-button-element */
-  .featherlight .featherlight-close-icon::-moz-focus-inner {
-    border: 0;
-    padding: 0;
-  }
-
-  .featherlight .featherlight-image {
-    /* styling */
+  @include mobile {
     width: 100%;
-  }
-
-
-  .featherlight-iframe .featherlight-content {
-    /* removed the border for image croping since iframe is edge to edge */
-    border-bottom: 0;
-    padding: 0;
-  }
-
-  .featherlight iframe {
-    /* styling */
-    border: none;
-  }
-
-  .featherlight * { /* See https://github.com/noelboss/featherlight/issues/42 */
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
   }
 }
 
-/* handling phones and small screens */
-@media only screen and (max-width: 1024px) {
-  .featherlight .featherlight-content {
-    /* dimensions: maximize lightbox with for small screens */
-    margin-left: 10px;
-    margin-right: 10px;
-    max-height: 98%;
+/* contains the content */
+.featherlight .featherlight-inner {
+  /* make sure its visible */
+  display: block;
+}
 
-    padding: 10px 10px 0;
-    border-bottom: 10px solid transparent;
+.featherlight .featherlight-close-icon {
+  /* position: centering vertical and horizontal */
+  position: absolute;
+  z-index: 9999;
+  top: 0;
+  right: -40px;
+  font-size: 30px;
+  line-height: 25px;
+  width: 25px;
+  cursor: pointer;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  background: transparent;
+  color: #fff;
+  outline: 0;
+  border: none;
+  padding: 0;
+
+  @include mobile {
+    top: -35px;
+    right: 10px;
   }
+}
+
+/* See http://stackoverflow.com/questions/16077341/how-to-reset-all-default-styles-of-the-html5-button-element */
+.featherlight .featherlight-close-icon::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+.featherlight .featherlight-image {
+  /* styling */
+  width: 100%;
+}
+
+
+.featherlight-iframe .featherlight-content {
+  /* removed the border for image croping since iframe is edge to edge */
+  border-bottom: 0;
+  padding: 0;
+}
+
+.featherlight iframe {
+  /* styling */
+  border: none;
+}
+
+.featherlight * { /* See https://github.com/noelboss/featherlight/issues/42 */
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
